<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/top_colour">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
             app:tint="@color/white"
             android:layout_weight="1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Profile Details"
             android:textSize="20sp"
             android:layout_weight="10"
             android:textColor="@color/white"/>
      </LinearLayout>


   </com.google.android.material.appbar.AppBarLayout>

   <androidx.cardview.widget.CardView
      android:id="@+id/about_card"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="25dp"
       android:layout_marginTop="90dp"
       android:layout_marginHorizontal="20dp"
       app:cardElevation="25dp"
       android:background="@color/white">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingVertical="20dp">

<!--         <de.hdodenhof.circleimageview.CircleImageView-->
<!--             android:id="@+id/logo"-->
<!--             android:layout_width="50dp"-->
<!--             android:layout_height="50dp"-->
<!--             android:layout_alignParentStart="true"-->
<!--             android:layout_marginStart="27dp"-->
<!--             android:layout_marginTop="20dp"-->
<!--             android:background="@color/circular_img_color"/>-->

         <TextView
             android:id="@+id/logo"
             android:layout_height="50dp"
             android:layout_width="50dp"
             android:text="PK"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textAlignment="center"
             android:background="@drawable/circular_img_bg"
             android:layout_alignParentStart="true"
             android:layout_marginStart="27dp"
             android:layout_marginTop="20dp"
             />

         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:layout_toRightOf="@+id/logo"
             android:text="Pragya Khurana"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="25sp" />

         <TextView
             android:id="@+id/emailId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Khuranapragya01@gmail.com"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
             android:textSize="18sp"
             android:textColor="@color/grey"
             android:layout_toRightOf="@+id/logo"
             android:layout_below="@id/name"/>

         <ImageView
             android:id="@+id/timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/logo"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             app:tint="@color/circular_img_color"
             android:src="@drawable/time" />

         <TextView
             android:id="@+id/created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/emailId"
             android:layout_alignStart="@+id/timer"
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:text="@string/created_on"
             android:textSize="20sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/created_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/emailId"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/created"
             android:text="@string/_2023_01_14_10_04"
             android:textSize="20sp" />


         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/timer"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:text="@string/lead_status"
             android:textSize="20sp"
             android:textStyle="bold" />

         <LinearLayout
             android:id="@+id/textBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/created"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/status"
             android:background="@drawable/bg"
             android:orientation="vertical"
             android:paddingStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/fresh"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/muretrial"
                android:textSize="15sp"
                android:textStyle="bold" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:paddingHorizontal="10dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
             android:layout_below="@+id/textBox">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
               android:src="@drawable/call"
               app:tint="@color/circular_img_color"
                android:layout_weight="1"
               android:layout_marginHorizontal="10dp"
                android:background="@drawable/img_bg"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/mail"
                app:tint="@color/circular_img_color"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/img_bg"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/whatsapp"
                app:tint="@color/circular_img_color"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/img_bg"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/message"
                app:tint="@color/circular_img_color"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/img_bg"/>

         </LinearLayout>


      </RelativeLayout>


   </androidx.cardview.widget.CardView>

   <TextView
       android:id="@+id/notes"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/notes"
      android:textSize="25sp"
      android:layout_below="@+id/about_card"
      android:layout_marginStart="30dp"
      android:layout_marginTop="20dp"/>

   <EditText
      android:id="@+id/notes_value"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/notes"
       android:layout_marginTop="5dp"
      android:background="@drawable/bg"
      android:hint="@string/type_notes"
       android:paddingStart="10dp"
       android:layout_marginHorizontal="30dp"
       android:paddingVertical="20dp"/>

   <androidx.cardview.widget.CardView
       android:id="@+id/jarvis_card"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:layout_below="@id/notes_value"
      android:layout_marginHorizontal="10dp"
       android:layout_marginTop="10dp"
       app:cardCornerRadius="10dp"
       app:cardElevation="10dp"
       android:paddingVertical="30dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingVertical="20dp">

         <TextView
             android:id="@+id/jarvis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/jarvis"
             android:layout_marginStart="20dp"
             android:textSize="20sp"
             android:layout_marginTop="10dp"/>

         <ImageView
             android:id="@+id/jarvis_timer"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_below="@+id/jarvis"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/time"
             app:tint="@color/circular_img_color" />

         <TextView
             android:id="@+id/jarvis_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/jarvis_timer"
             android:text="@string/_2023_06_30_22_00_04"
             android:layout_below="@+id/jarvis"
             android:textColor="@color/grey"
             android:textSize="20sp" />

         <View
             android:id="@+id/line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/jarvis_timer"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@color/grey" />

         <TextView
             android:id="@+id/Note"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/line"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:text="@string/note"
             android:textColor="@color/black"
             android:textSize="20sp" />

         <TextView
             android:id="@+id/Note_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/line"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/Note"
             android:text="@string/callback_date_2023_07_01_n00_00_00_updated_by_jarvis_nmissed_callbacks"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_marginBottom="20dp"/>

      </RelativeLayout>

   </androidx.cardview.widget.CardView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/jarvis_card"
      android:layout_alignParentBottom="true"
       android:layout_marginTop="10dp"
       android:orientation="horizontal">

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:layout_weight="1"
          android:backgroundTint="@color/dnd_btn"
          android:text="DND"
          android:paddingVertical="10dp"
          android:textColor="@color/white"
          android:textSize="20sp" />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:layout_weight="1"
          android:backgroundTint="@color/save_btn"
          android:text="SAVE"
          android:paddingVertical="10dp"
          android:textColor="@color/dnd_btn"
          android:textSize="20sp" />
   </LinearLayout>


</RelativeLayout>